@@ -1,3 +1,9 @@
+2008-06-05  Marcus Meissner  <marcus@jet.franken.de>
+	    Linus Walleij  <triad@df.lth.se>
+
+	* music-players.h, device-flags.h: Merged new music
+	  players from libmtp.
+
 2008-04-11  Marcus Meissner  <marcus@jet.franken.de>
 
 	* library.c, config.c: Added EOS 450D capture mode.
